--- a/app/src/main/res/layout/activity_motion_layout.xml
+++ b/app/src/main/res/layout/activity_motion_layout.xml
@@ -13,7 +13,7 @@
         android:id="@+id/text_the"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="The"
+        android:text="@string/the"
         android:textColor="@color/special_teal"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:text="Pull down to see the new logo -or-"
+        android:text="@string/pull_down_to_see_the_new_logo_or"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -73,7 +73,7 @@
         android:paddingRight="8dp"
         android:background="@color/special_teal"
         android:textColor="@color/white"
-        android:text="Launch Animation"
+        android:text="@string/launch_animation"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/info_text"
