--- a/app/src/main/res/menu/detail_actions.xml
+++ b/app/src/main/res/menu/detail_actions.xml
@@ -6,7 +6,7 @@
     <item android:id="@+id/menu_search"
         android:title="@string/find_os"
         android:icon="@drawable/vct_search"
-        app:showAsAction="collapseActionView|always"
+        app:showAsAction="collapseActionView|ifRoom"
         android:orderInCategory="98"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         tools:ignore="AppCompatResource" />
@@ -15,6 +15,6 @@
         android:title="@string/shuffle"
         android:icon="@drawable/vct_shuffle"
         android:orderInCategory="99"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         tools:ignore="AppCompatResource"/>
 </menu>
