--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -12,7 +12,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Android Historian"
+        android:text="@string/app_name"
         android:textAppearance="?textAppearanceBody1"/>
 
 </LinearLayout>
