--- a/app/src/main/res/menu/drawer_actions.xml
+++ b/app/src/main/res/menu/drawer_actions.xml
@@ -33,16 +33,16 @@
         </menu>
     </item>
 
-    <item android:title="Demos">
+    <item android:title="@string/demos">
         <menu>
             <item
                 android:id="@+id/nav_bottom_nav"
                 android:icon="@drawable/ic_link"
-                android:title="BottomNavView"/>
+                android:title="@string/bottomnavview"/>
             <item
                 android:id="@+id/nav_motionlayout"
                 android:icon="@drawable/ic_link"
-                android:title="MotionLayout"/>
+                android:title="@string/motionlayout"/>
         </menu>
     </item>
 </menu>
