--- a/app/src/main/res/menu/profile_actions.xml
+++ b/app/src/main/res/menu/profile_actions.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_save"
         android:title="@string/menu_save"
         android:icon="@drawable/vct_save"
-        android:showAsAction="withText|always"  />
+        app:showAsAction="withText|always" />
 </menu>
