--- a/app/src/main/res/menu/toolbar_actions.xml
+++ b/app/src/main/res/menu/toolbar_actions.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_settings"
         android:title="@string/menu_settings"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 </menu>
