Changes to add Room to Details vertical
Additional changes and cleanup, with a great stopping point, for using Room in this app

--- a/app/src/main/res/layout/fragment_prod_list.xml
+++ b/app/src/main/res/layout/fragment_prod_list.xml
@@ -6,10 +6,21 @@
     android:fitsSystemWindows="true">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
+        android:id="@+id/product_recyclerview"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:paddingBottom="48dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/product_nodata_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:drawablePadding="8dp"
+        android:gravity="center_vertical"
+        android:text="@string/gathering_data"
+        android:visibility="visible" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
