Add animation for Fav Heart of no-content screen and UI cleanup
Also got rid of some PNG resources, replacing with vectors, and also smal db cleanup

--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -295,9 +295,10 @@
                             android:gravity="center">
 
                             <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:src="@drawable/ic_account_lg" />
+                                android:layout_width="72dp"
+                                android:layout_height="72dp"
+                                android:layout_marginBottom="16dp"
+                                app:srcCompat="@drawable/vct_account_circle" />
 
                             <Button
                                 android:id="@+id/profile_pic_button"
