--- a/app/src/main/res/layout/fragment_prod_list.xml
+++ b/app/src/main/res/layout/fragment_prod_list.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/product_recyclerview"
@@ -13,14 +14,34 @@
         android:layout_height="match_parent"
         android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/product_nodata_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:drawablePadding="8dp"
-        android:gravity="center_vertical"
-        android:text="@string/gathering_data"
-        android:visibility="visible" />
+    <LinearLayout
+        android:id="@+id/product_nodata_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <CheckBox
+            android:id="@+id/product_nodata_img"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:gravity="center_vertical"
+            android:button="@null"
+            android:background="@drawable/bg_fav_green_selector"
+            android:stateListAnimator="@animator/scale"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/product_nodata_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:drawablePadding="8dp"
+            android:gravity="center_vertical"
+            android:text="@string/gathering_data"
+            android:visibility="visible" />
+    </LinearLayout>
+
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
