--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -10,9 +10,17 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <TextView
+        android:id="@+id/header_apptitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
+        android:text="@string/os_and_device_historian"
+        android:textAppearance="?textAppearanceHeadline6"/>
+
+    <TextView
+        android:id="@+id/header_versioninfo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Version: "
         android:textAppearance="?textAppearanceBody1"/>
 
 </LinearLayout>
