--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -319,6 +319,54 @@
                     android:orientation="vertical">
 
                     <com.google.android.material.chip.Chip
+                        android:id="@+id/notification_chip"
+                        style="@style/ChipLabel"
+                        android:text="Notifications"
+                        app:chipBackgroundColor="@color/transparent"
+                        app:chipIcon="@drawable/vct_text_scale"
+                        app:chipStrokeColor="@color/black"
+                        app:chipStrokeWidth="1dp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/notifstart_button_start"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="16dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginRight="16dp"
+                            android:layout_marginBottom="16dp"
+                            android:background="@drawable/bg_button"
+                            android:text="Start Notifications" />
+
+                        <Button
+                            android:id="@+id/notifstart_button_end"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="16dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginRight="16dp"
+                            android:layout_marginBottom="16dp"
+                            android:background="@drawable/bg_button"
+                            android:text="Stop Notifications" />
+
+
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_gradient_lightgreen"
+                    android:orientation="vertical">
+
+                    <com.google.android.material.chip.Chip
                         android:id="@+id/bottom_button_chip"
                         style="@style/ChipLabel"
                         android:text="@string/text_scale_demo"
