Notifications (showing WorkManager), and a branded splash screen
- Add a splash screen when the app launches
- WorkManager example using Periodic scheduled action to send a notification at every 15 minutes (shortest interval possible)
- Displaying Version info inside the App

--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -13,7 +13,7 @@
         android:id="@+id/header_apptitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/os_and_device_historian"
+        android:text="@string/app_name"
         android:textAppearance="?textAppearanceHeadline6"/>
 
     <TextView
