--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
-        <item>@font/alegreya</item>
-        <item>@font/lato</item>
+        <item>@font/robotoslab</item>
+        <item>@font/raleway</item>
     </array>
 </resources>
