Chips to not clickable, change style of Tab indicator
More small adjustments to UI

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -109,6 +109,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:layout_marginTop">16dp</item>
+        <item name="android:clickable">false</item>
     </style>
 
     <style name="specItem">
