--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,8 +27,8 @@
                 android:layout_height="wrap_content"
                 android:background="?attr/colorPrimary"
                 app:tabSelectedTextColor="@color/grey_300"
-                app:tabIndicatorColor="@color/color_accent"
-                app:tabIndicatorHeight="4dp"
+                app:tabIndicatorColor="@color/white"
+                app:tabIndicatorHeight="3dp"
                 app:tabTextColor="@color/white" />
 
             <androidx.viewpager.widget.ViewPager
