--- a/app/src/main/res/menu/main_actions.xml
+++ b/app/src/main/res/menu/main_actions.xml
@@ -3,11 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/search"
-        android:title="@string/search"
-        android:icon="@drawable/vct_search"
-        app:showAsAction="collapseActionView|always"
+    <item android:id="@+id/menu_help"
+        android:title="@string/help"
+        android:icon="@drawable/vct_help"
         android:orderInCategory="98"
-        app:actionViewClass="androidx.appcompat.widget.SearchView"
-        tools:ignore="AppCompatResource" />
+        app:showAsAction="ifRoom"
+        tools:ignore="AppCompatResource"/>
 </menu>
