Add Detekt for Static Analysis, and the fixes it suggests
This has various changes found by Detekt, and also has the files to run it.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,6 @@
     <dimen name="card_elevation">6dp</dimen>
 
     <integer name="anim_duration">300</integer>
+
+    <integer name="text_special_size">16</integer>
 </resources>
