--- a/app/src/main/res/menu/drawer_profile_actions.xml
+++ b/app/src/main/res/menu/drawer_profile_actions.xml
@@ -4,15 +4,15 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_android"
+            android:icon="@drawable/vct_android"
             android:title="@string/nav_os"/>
         <item
             android:id="@+id/nav_devices"
-            android:icon="@drawable/ic_device"
+            android:icon="@drawable/vct_device"
             android:title="@string/nav_devices"/>
         <item
             android:id="@+id/nav_favorites"
-            android:icon="@drawable/ic_favorite_on"
+            android:icon="@drawable/vct_fav"
             android:title="@string/nav_fav"/>
     </group>
 
@@ -27,6 +27,11 @@
                 android:id="@+id/nav_playlink"
                 android:icon="@drawable/vct_vikinghelmet"
                 android:title="@string/play_store_beta" />
+
+            <item
+                android:id="@+id/nav_githublink"
+                android:icon="@drawable/vct_github"
+                android:title="@string/source_code" />
         </menu>
     </item>
 
@@ -34,11 +39,11 @@
         <menu>
             <item
                 android:id="@+id/nav_link1"
-                android:icon="@drawable/ic_link"
+                android:icon="@drawable/vct_link"
                 android:title="@string/nav_link1"/>
             <item
                 android:id="@+id/nav_link2"
-                android:icon="@drawable/ic_link"
+                android:icon="@drawable/vct_link"
                 android:title="@string/nav_link2"/>
         </menu>
     </item>
