--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/user_main_coordinator"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <!--<com.google.android.material.bottomappbar.BottomAppBar-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,19 +22,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?attr/colorPrimary"
-                app:tabSelectedTextColor="@color/grey_300"
-                app:tabIndicatorColor="@color/white"
+                app:tabIndicatorColor="@color/white_bluetint"
                 app:tabIndicatorHeight="3dp"
-                app:tabTextColor="@color/white" />
+                app:tabSelectedTextColor="@color/grey_300"
+                app:tabTextColor="@color/white_bluetint" />
 
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/product_viewpager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
         </LinearLayout>
-
 
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottom_appbar"
@@ -48,17 +42,15 @@
             app:backgroundTint="@color/color_primary"
             app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
             app:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar" />
-
-
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
-        android:layout_height="match_parent"
         android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/drawer_main_actions"/>
+        app:menu="@menu/drawer_main_actions" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
