--- a/app/src/main/res/layout/fragment_prod_list.xml
+++ b/app/src/main/res/layout/fragment_prod_list.xml
@@ -3,12 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:fitsSystemWindows="true" >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/product_recyclerview"
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:paddingBottom="48dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
