--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Base.Theme.DesignDemo" parent="Theme.MaterialComponents.Light.NoActionBar">
+<!--    <style name="Base.Theme.DesignDemo" parent="Theme.MaterialComponents.DayNight.NoActionBar">-->
+        <style name="Base.Theme.DesignDemo" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">@color/color_primary</item>
-        <item name="colorPrimaryDark">@color/color_primary_dark</item>
+        <item name="colorPrimaryVariant">@color/color_primary_variant</item>
+        <item name="colorOnPrimary">#000000</item>
+        <item name="colorSecondary">@color/color_accent</item>
+        <item name="colorSecondaryVariant">#2bbd7e</item>
+        <item name="colorOnSecondary">#000000</item>
+        <item name="colorError">@color/color_error</item>
+        <item name="colorOnError">#ffffff</item>
+        <item name="colorSurface">@color/color_surface</item>
+        <item name="colorPrimaryDark">@color/color_primary_variant</item>
         <item name="colorAccent">@color/color_accent</item>
         <item name="android:windowBackground">@color/window_background</item>
-        <item name="colorSecondary">@color/color_accent</item>
         <item name="textAppearanceHeadline6">@style/TextAppearance.MyApp.Headline6</item>
         <item name="textAppearanceHeadline5">@style/TextAppearance.MyApp.Headline5</item>
         <item name="textAppearanceHeadline1">@style/TextAppearance.MyApp.Headline1</item>
@@ -18,23 +26,6 @@
     <style name="Base.Theme.DesignDemo.Launcher">
         <item name="android:windowBackground">@drawable/bg_splash</item>
     </style>
-
-    <!-- Coming Soon -->
-    <!--<item name="colorSecondary">@color/color_secondary</item>-->
-    <!--<item name="colorSecondaryDark">@color/color_secondary_dark</item>-->
-    <!--<item name="colorSecondaryLight">@color/colors_secondary_light</item>-->
-
-    <!--<item name="colorPrimaryVariant">@color/green_600</item>-->
-    <!--<item name="colorSecondaryVariant">@color/green_600</item>-->
-    <!--<item name="colorBackground">@color/green_600</item>-->
-    <!--<item name="colorError">@color/green_600</item>-->
-    <!--<item name="colorSurface">@color/green_600</item>-->
-    <!--<item name="colorOnPrimary">@color/green_600</item>-->
-    <!--<item name="colorOnSecondary">@color/green_600</item>-->
-    <!--<item name="colorOnBackground">@color/green_600</item>-->
-    <!--<item name="colorOnError">@color/green_600</item>-->
-    <!--<item name="colorOnSurface">@color/green_600</item>-->
-
 
     <!--Create custom style for a Component, that will be applied manually-->
     <style name="Widget.CardContent" parent="android:Widget">
